# tailwindcss_resume

./: .gitignore  README.md  pyproject.toml
app/: main.py  resume-content-base.example.yml  resume-content.example.yml  tailwind.config.js
app/static/css/: main.css
app/static/src/: bismarck.css  bismarck_tight.css
app/templates/: base.html
